--- a/donor-service/src/main/resources/templates/donor-complete-profile.html
+++ b/donor-service/src/main/resources/templates/donor-complete-profile.html
@@ -8,7 +8,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-        <a class="navbar-brand" href="/">Blood Donation System - Donor Registration</a>
+        <a class="navbar-brand" href="/">Blood Connect - Donor Registration</a>
     </div>
 </nav>
 
